# ditto-knowmad-python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
client/: README.md  pyproject.toml
src/ditto-knowmad/: DittoClient.py  backend_requests.py
src/ditto_knowmad/: DittoClient.py  backend_requests.py
