[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ditto_knowmad"
version = "0.0.1"
authors = [
  { name="Ditto team", email="team@ditto.fyi" },
]
description = "Client for Ditto API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.packages]
name = "ditto_knowmad"
include = ["src/ditto_knowmad"]
